# LLMChatGui

./: Cargo.toml  LICENSE
src/: main.rs
src/backend/: discord.rs  mod.rs  model.rs
src/frontend/: gui.rs  mod.rs  requests.rs  text.rs
src/frontend/panels/: config.rs  mod.rs
